--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="style.css">
-<link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Amiri" rel="stylesheet">
 </head>
 <body>
 <nav class="navbar navbar-default" id="myNav" >
