--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	       <li><a href="#">ABOUT</a></li>
 	        <li><a href="#">CATERING</a></li>
 	       <li><a href="#">LOCATIONS</a></li>
-	       <li><a href="#">DELIVERY</a></li>
+	       <li><a href="pages/delivery.html">DELIVERY</a></li>
 	       <li><a href="#">CONTACT</a></li>
 
 	       
