--- a/pages/delivery.html
+++ b/pages/delivery.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -130,10 +131,10 @@
 					</div>
 					<div class="row card-price">
 						<div class="col-md-12 col-lg-12">
-							<span onclick="add('Sandwich Tuna (bread)',40)">BREAD - 40EGP</span>
+							<button onclick="add('Sandwich Tuna (bread)',40)">BREAD - 40EGP</button>
 						</div>
 						<div class="col-md-12 col-lg-12">
-							<span onclick="add('Sandwich Tuna (syrian bread)',40)">SYRIAN BREAD - 40EGP</span>
+							<button onclick="add('Sandwich Tuna (syrian bread)',40)">SYRIAN BREAD - 40EGP</button>
 						</div>
 					</div>
 				</div>
@@ -161,10 +162,10 @@
 					</div>
 					<div class="row card-price">
 						<div class="col-md-12 col-lg-12">
-							<span onclick="add('Sandwich Tuna (bread)',40)">BREAD - 40EGP</span>
+							<button onclick="add('Sandwich Tuna (bread)',40)">BREAD - 40EGP</button>
 						</div>
 						<div class="col-md-12 col-lg-12">
-							<span onclick="add('Sandwich Tuna (syrian bread)',40)">SYRIAN BREAD - 40EGP</span>
+							<button onclick="add('Sandwich Tuna (syrian bread)',40)">SYRIAN BREAD - 40EGP</button>
 						</div>
 					</div>
 				</div>
